force-app/main/default/objects/FieloPLT__ProviderOrder__c/FieloPLT__ProviderOrder__c.object-meta.xml
<CustomObject>
    <description>Order number of the individual or entity which provides Rewards (e.g. Amazon).</description>
    <label>Provider Order</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Provider Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>