force-app/main/default/objects/FieloPLT__ProviderOrder__c/fields/FieloPLT__Account__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It shows the related Provider of the Provider Order. Provider always is a SFDC Account, either a Person or Business Account.</description>
    <inlineHelpText>Provider related to the Provider Order. Provider must be a SFDC Account, either a Person or Business Account.</inlineHelpText>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Orders</relationshipLabel>
    <relationshipName>ProviderOrders</relationshipName>
    <type>Lookup</type>
</CustomField>