force-app/main/default/objects/FieloPLT__ProviderOrder__c/fields/FieloPLT__DeliveredDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__DeliveredDate__c</fullName>
    <description>Date in which the Provider of the Provider Order supplied the Redemption/s Item/s.</description>
    <inlineHelpText>Date in which the Provider of the Provider Order supplied the Redemption/s Item/s.</inlineHelpText>
    <label>Delivered Date</label>
    <type>Date</type>
</CustomField>