force-app/main/default/objects/FieloPLT__ProviderOrder__c/fields/FieloPLT__Redemption__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Redemption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It shows the Redemption reference ID which the Provider Order is related to.</description>
    <inlineHelpText>Redemption which the Provider Order is related to.</inlineHelpText>
    <label>Redemption</label>
    <referenceTo>FieloPLT__Redemption__c</referenceTo>
    <relationshipLabel>Provider Orders</relationshipLabel>
    <relationshipName>ProviderOrders</relationshipName>
    <type>Lookup</type>
</CustomField>