force-app/main/default/objects/FieloPLT__ProviderOrder__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>It allows you to choose the Provider Order status. There are two available statuses: Open, when the Order is created and Delivered, when Provider has already fullfiled delivery.</description>
    <inlineHelpText>Choose the Provider Order status: Open - when the Order is created -  and Delivered - when Provider has already fullfiled delivery.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>